# tum-mci

./: .gitignore  README.md  documentation.md  pyproject.toml
00_munich_inventory/: sum_2019.xlsx  sum_2020.xlsx  sum_2021.xlsx  sum_2022.xlsx
code/: check_temp_profiles.ipynb  collect_prtr_data.ipynb  combine_inventory.ipynb  convert_to_netcdf.ipynb  gnfr_a_temporal_profiles.ipynb  investigate_data.ipynb  plot_sector_and_trend.ipynb
data/: README.md  TNO_1km_grid_munich.gpkg  munich-city-boarders.gpkg
doc/: documentation.md
output/: README.md
output/2018/temporal-profiles/GNFR_A/: hkw_nord_block_2.csv  hkw_sued_GuD_1.csv  hkw_sued_GuD_2.csv
output/2018/temporal-profiles/GNFR_C/: 2018_GNFR_C.csv
output/2019/: Munich_GHGco_v2_2_year2019_FP_1km_grid.nc  sector_totals_2019.xlsx
output/2019/temporal-profiles/GNFR_A/: 2019_GNFR_A_hkw_freimann.csv  2019_GNFR_A_hkw_nord_block_1.csv  2019_GNFR_A_hkw_nord_block_2.csv  2019_GNFR_A_hkw_nord_hw.csv  2019_GNFR_A_hkw_sued_gud_1.csv  2019_GNFR_A_hkw_sued_gud_2.csv  2019_GNFR_A_hw_gaisbergstrasse.csv  2019_GNFR_A_hw_kathi_kobus_strasse.csv  2019_GNFR_A_hw_perlach.csv  2019_GNFR_A_hw_riem.csv  hkw_nord_block_2.csv  (+6 more)
output/2020/: Munich_GHGco_v2_2_year2020_FP_1km_grid.nc  sector_totals_2020.xlsx
output/2021/: Munich_GHGco_v2_2_year2021_FP_1km_grid.nc  sector_totals_2021.xlsx
output/2022/: Munich_GHGco_v2_2_year2022_FP_1km_grid.nc  sector_totals_2022.xlsx
output/2023/: Munich_GHGco_v2_2_year2023_FP_1km_grid.nc  sector_totals_2023.xlsx
output/2024/: Munich_GHGco_v2_2_year2024_FP_1km_grid.nc  sector_totals_2024.xlsx
(+88 files in other folders)
