[project]
name = "tum-mci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pip>=25.2",
    "requests>=2.32.4",
]
